# Studly-A2A

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA_CHECKLIST.md  CHANGELOG.md  DEPLOYMENT.md  HISTORY_TRIMMING.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_EXAMPLE.md  README.md  TESTING.md  TICKET_CHECKLIST.md  app.py  benchmark_history.py  config.py  load_test.py  main.py  pyproject.toml  test_history_trimming.py  utils.py
agents/: agent.py
docs/: performance.md
models/: a2a.py
scripts/: profile_tasks_send.py
tests/: test_async_agent.py  test_async_endpoint.py
