[project]
name = "hng3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.10",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "hypercorn>=0.17.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "aiohttp>=3.11.11",
]
